--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="tabs-block" id="pills-tab-two" role="tablist">
-                    <div
+                    <button
                         class="tab-panel__button active"
                         id="pills-online-tab"
                         data-bs-toggle="pill"
@@ -62,8 +62,8 @@
                         aria-selected="true"
                     >
                         Online
-                    </div>
-                    <div
+                    </button>
+                    <button
                         class="tab-panel__button"
                         id="pills-create-tab"
                         data-bs-toggle="pill"
@@ -74,7 +74,7 @@
                         aria-selected="false"
                     >
                         Создать
-                    </div>
+                    </button>
                 </div>
 
                 <div class="tab-content" id="pills-tab-twoContent">
